# YourJobFinder

./: .gitignore  README.md  app.py  credential.py  database-crawler.py  email_manager.py  google_crawler.py  google_scraper_models.py  google_scraper_service.py  html_render.py  logger.py  logger_utils.py  main.py  pyproject.toml  test_google_scraper.py
JobSpy/: GOOGLE_SCRAPER_IMPROVEMENTS.md  run_tests.py
JobSpy/src/jobspy/scrapers/: proxy_manager.py  proxy_scraper.py
JobSpy/src/jobspy/scrapers/google/: __init__.py  improved_scraper.py
JobSpy/src/jobspy/scrapers/linkedin/: __init__.py
JobSpy/tests/: README.md  test_format_proxy.py  test_job_scrapers_integration.py  test_job_scrapers_mock.py  test_job_scrapers_unit.py  test_proxy_scraper_integration.py  test_proxy_scraper_mock.py  test_proxy_scraper_unit.py
db/: database_service.py  models.py
job_matching/: job_matching_models.py  job_matching_service.py
migrations/versions/: c3d4e5f6g7h8_add_uuid_to_users.py  d4e5f6g7h8i9_add_user_details.py  e5f6g7h8i9j0_add_confirmation_fields.py
nodejs-scraper/: .gitignore  README.md  example.js  google-scraper.js  integration.js  package-lock.json  package.json  test.js
scrapers/: google_scraper_models.py  google_scraper_service.py
thesis-tools/: filter_links.py  filtered_jobs.csv  indeed_crawler.py  jobs.csv  linkedin_crawler.py
