[project]
name = "job-finder-backend"
version = "0.1.0"
description = "Backend for a job aggregator system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "beautifulsoup4",
    "cachetools==5.5.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "grpcio==1.68.1",
    "h11==0.16.0",
    "httpcore",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "idna==3.10",
    "markdownify",
    "numpy==2.2.1",
    "pandas==2.2.3",
    "pyasn1==0.6.2",
    "pyasn1_modules==0.4.1",
    "pydantic",
    "pydantic_core",
    "pyparsing",
    "python-dateutil",
    "pytz",
    "regex",
    "requests",
    "rsa",
    "six",
    "sniffio",
    "soupsieve",
    "tls-client",
    "typing_extensions",
    "tzdata",
    "uritemplate==4.1.1",
    "urllib3",
    "PySocks==1.7.1",
    "schedule==1.2.2",
    "SQLAlchemy",
    "Flask",
    "gunicorn",
    "Flask-Cors",
    "psycopg2",
    "psycopg2-binary",
    "Flask-SQLAlchemy",
    "Flask-Migrate",
]
